@@ -6,14 +6,16 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
-import org.springframework.util.AntPathMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
-import java.io.IOException;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-import java.util.Collections;
+
+import java.io.IOException;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -27,20 +29,45 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         final String uri = request.getRequestURI();
-        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) return true; // preflight
+        final String method = request.getMethod();
 
+        System.out.println("🔍 JwtAuthFilter.shouldNotFilter 체크");
+        System.out.println("URI: " +
+            uri);
+        System.out.println("Method: " + method);
+
+        if ("OPTIONS".equalsIgnoreCase(method)) {
+            System.out.println("✅ OPTIONS 요청 - 필터 스킵");
+            return true;
+        }
         var m = new org.springframework.util.AntPathMatcher();
         String[] skip = {
-                "/auth/oidc/start",
-                "/auth/oidc/callback",
-                "/auth/refresh",
-                "/auth/logout",
-                "/health",
-                "/api/dev/**",      // 개발용 (있다면)
-                "/docs/**",
-                "/v3/api-docs/**",
-                "/swagger-ui/**",
-                "/swagger-ui.html"
+            "/auth/oidc/start",
+            "/auth/oidc/callback",
+            "/auth/refresh",
+            "/auth/logout",
+            "/api/auth/oidc/start",        // /auth → /api/auth 수정
+            "/api/auth/oidc/callback",     // /auth → /api/auth 수정
+            "/api/auth/refresh",           // /auth → /api/auth 수정
+            "/api/auth/logout",            // /auth → /api/auth 수정
+            "/health",
+            "/api/dev/**",
+            "/docs/**",
+            "/v3/api-docs/**",
+            "/swagger-ui/**",
+            "/swagger-ui.html",
+            "/api/posts/**",
+            "/api/users/*/posts",
+            "/api/posts/*/bookmarks",
+            "/api/posts/*/comments/*",
+            "/api/youtube/*",
+            "/api/posts",
+            "/api/posts/*/like",
+            "/api/search/**",
+            "/api/search",
+            "/api/harmony/**",
+            "/api/harmony"
+
         };
         for (String p : skip) {
             if (m.match(p, uri)) return true;
@@ -50,7 +77,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
-            throws ServletException, IOException {
+        throws ServletException, IOException {
 
         var existing = SecurityContextHolder.getContext().getAuthentication();
         if (existing != null && existing.isAuthenticated() && !(existing instanceof AnonymousAuthenticationToken)) {
@@ -70,7 +97,12 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             jwtUtil.validateAccess(token);
             String userId = jwtUtil.getUserIdFromAccess(token);
 
-            var auth = new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+            // 🎯 기본 ROLE_USER 권한 부여
+            List<GrantedAuthority> authorities = List.of(
+                new SimpleGrantedAuthority("ROLE_USER")
+            );
+
+            var auth = new UsernamePasswordAuthenticationToken(userId, null, authorities);
             auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
 
             SecurityContextHolder.getContext().setAuthentication(auth);
@@ -84,6 +116,4 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             res.getWriter().write("{\"error\":\"unauthorized\",\"message\":\"Invalid or expired token\"}");
         }
     }
-
-
 }
